# deepface-facs

./: .gitignore  LICENSE  MANIFEST.in  README.md  check_versions.py  demo.py  facs_analyzer.py  facs_cli.py  install_env.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_deepface.py  test_landmarks.py
.github/workflows/: publish.yml  test.yml
benchmarks/: frame_copy_benchmark.py
docs/: analysis_system.md
docs/report/: DeepFaceとFACS実装の調査.md  FACS対応のためのコード分析.md  eye-facs.md  sample.md
examples/: recording_demo.py
facs/: __init__.py  action_units.py  aijoi.txt  analyzer.py  au_detector.py  cli.py  emotion_mapper.py  ere.py  intensity_estimator.py  landmark_detector.py  visualizer.py
facs/config/: __init__.py  au_definitions.py
facs/core/: __init__.py  enums.py  exporter.py  interfaces.py  models.py  parallel_processor.py  terminal_display.py
facs/detectors/: __init__.py  au_detector.py  debug_landmarks.py  deepface_detector.py  face_aligner.py  feature_extractor.py  landmark_detector.py  optimized_feature_extractor.py  vectorized_au_detector.py
facs/detectors/strategies/: __init__.py  au_strategies.py
facs/estimators/: __init__.py  emotion_mapper.py  intensity_estimator.py
facs/recording/: __init__.py  exporter.py  player.py  recorder.py
facs/visualization/: __init__.py  components.py  font_manager.py  visualizer.py
recordings/: 20260114_095124_meta.json  20260114_101132.jsonl  20260114_101132_meta.json  20260114_102700.jsonl  20260114_102700_meta.json  20260114_102750_meta.json  20260114_132541_meta.json  20260114_132935_meta.json  20260114_133755_meta.json
tests/: __init__.py  conftest.py  test_analyzer.py  test_detectors.py  test_estimators.py
web/: __init__.py  check_network.py  server.py
web/static/: advanced-eye.html  emotion-recorder.html  eye-focus.html  index.html  screen-gaze.html
web/static/js/: blink-analyzer.js  emotion-recorder.js  eye-analyzer.js  gaze-allocation.js  gaze-heatmap.js  mediapipe-face.js  microsaccade-detector.js  pupillometry.js  screen-gaze.js
